# crdt-kit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
benches/: crdt_benchmarks.rs
crates/crdt-cli/: Cargo.toml
crates/crdt-cli/src/: commands.rs  main.rs
crates/crdt-codegen/: Cargo.toml
crates/crdt-codegen/src/: lib.rs  schema.rs  templates.rs  validator.rs
crates/crdt-dev-ui/: Cargo.toml
crates/crdt-dev-ui/src/: api.rs  lib.rs
crates/crdt-dev-ui/static/: index.html
crates/crdt-example-tasks/: Cargo.toml  crdt-schema.toml
crates/crdt-example-tasks/src/: main.rs
crates/crdt-example-tasks/src/persistence/: mod.rs  store.rs
crates/crdt-example-tasks/src/persistence/events/: mod.rs  policies.rs  project_events.rs  task_events.rs
crates/crdt-example-tasks/src/persistence/migrations/: helpers.rs  mod.rs  task_migrations.rs
crates/crdt-example-tasks/src/persistence/models/: mod.rs  project.rs  task.rs
crates/crdt-example-tasks/src/persistence/repositories/: mod.rs  project_repo.rs  task_repo.rs  traits.rs
crates/crdt-example-tasks/src/persistence/sync/: mod.rs  project_sync.rs
crates/crdt-kit/: Cargo.toml
crates/crdt-kit/examples/: chat.rs  counter.rs  ecommerce.rs
crates/crdt-kit/src/: aw_map.rs  clock.rs  crdt.rs  events.rs  gset.rs  lib.rs  lww_map.rs  or_set.rs  prelude.rs  rga.rs  version.rs  wasm.rs
crates/crdt-kit/tests/: gc_convergence.rs
crates/crdt-migrate/: Cargo.toml
crates/crdt-migrate-macros/: Cargo.toml
crates/crdt-migrate-macros/src/: lib.rs
crates/crdt-migrate/src/: engine.rs  envelope.rs  lib.rs  schema.rs
crates/crdt-migrate/tests/: macro_integration.rs
crates/crdt-store/: Cargo.toml
crates/crdt-store/examples/: collaborative.rs  event_sourcing.rs  iot_sensor.rs
crates/crdt-store/src/: db.rs  lib.rs  memory.rs  redb.rs  sqlite.rs  traits.rs
docs/: EVALUATION.md  astro.config.mjs  package-lock.json  package.json
docs/src/components/: CodeBlock.astro  DeviceAnimation.astro  HomePage.astro  InteractiveDemo.tsx  MergeVisualization.astro
docs/src/i18n/: translations.ts
docs/src/layouts/: Layout.astro
docs/src/styles/: global.css
examples/: todo_list.rs
scripts/: pre-commit  release.sh
src/: crdt.rs  gcounter.rs  gset.rs  lib.rs  lww_register.rs  mv_register.rs  or_set.rs  pncounter.rs  prelude.rs  rga.rs  text.rs  twop_set.rs  wasm.rs
tests/: convergence.rs
