[workspace]
resolver = "2"
members = [
    "crates/crdt-kit",
    "crates/crdt-store",
    "crates/crdt-migrate",
    "crates/crdt-migrate-macros",
    "crates/crdt-cli",
    "crates/crdt-dev-ui",
    "crates/crdt-codegen",
    "crates/crdt-example-tasks",
]

[workspace.package]
edition = "2021"
rust-version = "1.70"
authors = ["abdielLopezpy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/abdielLopezpy/crdt-kit"
homepage = "https://github.com/abdielLopezpy/crdt-kit"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
