[workspace]
resolver = "2"
members = [
    "crates/crdt-kit",
]
exclude = [
    "contrib/crdt-agent",
]

[workspace.package]
edition = "2021"
rust-version = "1.70"
authors = ["abdielLopezpy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crdt-kit/crdt-kit"
homepage = "https://github.com/crdt-kit/crdt-kit"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
