[package]
name = "crdt-codegen"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code generation from TOML schemas for crdt-kit: persistence layer with repositories, events, and sync"
readme = "../../README.md"
keywords = ["crdt", "codegen", "schema", "migration", "local-first"]
categories = ["development-tools", "database"]

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
